Solved the fold gap & side circle cutout issue

--- a/assets/template-giftcard.css
+++ b/assets/template-giftcard.css
@@ -28,8 +28,8 @@ margin-bottom:11px;
 content: "";
 position: absolute;
 top: 50%;
-width: 67px;
-height: 45px; 
+width: 74px;
+  height: 68px;
 border-radius: 50%;
 }
 
@@ -57,14 +57,14 @@ clip-path: polygon(57% 0%, 64% 69%, 350% 63%);
 }
 .gift-card-triangle {
 position: absolute;
-bottom: 0;
-right: 0;
-width: 28px;
-height: 48px;
-border-style: solid;
-border-width: 0 0 69px 112px;
-z-index: 1;
-clip-path: polygon(95% 48%, 1% 100%, 100% 77%);
+    bottom: 0;
+    right: 0;
+    width: 28px;
+    height: 48px;
+    border-style: solid;
+    border-width: 0px 0 74px 105px;
+    z-index: 1;
+    clip-path: polygon(91% 42%, 5% 101%, 100% 76%);
 }
 
 .gift-container-design {
